update classroom
